add forms to your html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Quiz Board</title>
-  </head>
-  <body>
+<html lang="en">
 
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <title>Quiz-Board</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Quiz Board</h1>
+      <p>This is a quiz on Javasript,its not that difficult,success</p>
+      <h4>Instructions</h4>
+      <ol>
+        <li>Read the questions carefully.</li>
+        <li>Answer by selecting one answer.</li>
+        <li>You may select another answer,if need of change</li>
+      </ol>
+    </div>
+    <form class="well">
+      <p>Is javascript related to Java as a programming language?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="myAnswer" value="1">
+          yes
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="myAnswer" value="2">
+          No
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="myAnswer" value="3">
+          None of the above
+        </label>
+      </div>
+
+
+    </form>
+    <form class="well">
+
+      <p>What is jquery?</p>
+      <div class="radio">
+        <label>
+          <input type="radio" name="myAnswer" value="1">
+          A web programming language
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="myAnswer" value="1">
+          A library of  javascript functions
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="myAnswer" value="3">
+          None of the above
+        </label>
+      </div>
+    </form>
+
+</body>
+
 </html>
