--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/scipts.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Quiz-Board</title>
 </head>
 
@@ -141,7 +141,7 @@
       </div>
     </div>
     <div class="well">
-    <input type="button" name="btnSubmit" value="Submit" id="submit">
+    <input type="button" name="btnSubmit" value="Submit" id="submit" onclick="">
     </div>
   </div>
 
